--- a/angular/index.html
+++ b/angular/index.html
@@ -44,8 +44,8 @@
 	</head>
 	<body>
 		 <iframe src="historia.html" id="primero"></iframe> 
-		 <!--<iframe src="archivo.html"></iframe> 
-		 <iframe src="historia.html"></iframe>--> 
+		 <iframe src="archivo.html"></iframe>
+		 <!--<iframe src="historia.html"></iframe>--> 
 		 <moldeo>Loading...</moldeo>
 	</body>
 </html>
