--- a/angular/index.html
+++ b/angular/index.html
@@ -44,7 +44,7 @@
 	</head>
 	<body>
 		 <iframe src="historia.html" id="primero"></iframe> 
-		 <iframe src="archivo.html"></iframe>
+		 <!--<iframe src="archivo.html"></iframe>-->
 		 <!--<iframe src="historia.html"></iframe>--> 
 		 <moldeo>Loading...</moldeo>
 	</body>
