--- a/angular/index.html
+++ b/angular/index.html
@@ -43,7 +43,7 @@
 		</style>
 	</head>
 	<body>
-		 <iframe src="historia.html" id="primero"></iframe> 
+		 <!--<iframe src="historia.html" id="primero"></iframe>--> 
 		 <!--<iframe src="archivo.html"></iframe>-->
 		 <!--<iframe src="historia.html"></iframe>--> 
 		 <moldeo>Loading...</moldeo>
