Adding FileAdminService & JsonService

--- a/a2cli/src/index.html
+++ b/a2cli/src/index.html
@@ -11,8 +11,10 @@
 <body>
   <script>
     var fs = undefined;
+    var http = undefined;
     if (window["require"]) {
        fs = require("fs");
+       http = require("http");
     }
   </script>
   <app-root>Loading...</app-root>
