Update element with moldeojs-view and parameter src

--- a/elements/index.html
+++ b/elements/index.html
@@ -16,7 +16,7 @@
 	       http = require("http");
 	    }
     </script>
-    <moldeojs-viewer></moldeojs-viewer>
+    <moldeojs-viewer src="molrepos/basic/01_Icon/01_Icon.mol"></moldeojs-viewer>
     <script type="text/javascript" src="moldeojs-element.js"></script>
 </body>
 </html>
