--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
 </head>
 <body>
+  <!--
   <script>
     var fs = undefined;
     var http = undefined;
@@ -17,7 +18,7 @@
        fs = require("fs");
        http = require("http");
     }
-  </script>
+  </script>-->
   <app-root>Loading...</app-root>
 </body>
 </html>
