--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
        http = require("http");
     }
   </script>-->
+  <script>
+    window.onload = function() {
+      var context = new AudioContext();
+    }
+  </script>
   <app-root>Loading...</app-root>
 </body>
 </html>
