Back text showing

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
   </script>-->
   <script>
     window.onload = function() {
-      var context = new AudioContext();
+      //var context = new AudioContext();
+      document.getElementById("audio1").play();
     }
   </script>
   <app-root>Loading...</app-root>
