--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="noselect">
+<body class="noselectx">
   <script>
     var fs = undefined;
     var http = undefined;
@@ -17,6 +17,6 @@
        http = require("http");
     }
   </script>
-  <app-root>Loading...</app-root>  
+  <app-root>Loading...</app-root>
 </body>
 </html>
