Upgrade moldeojs 0.9.21.65, added mouse[xyz]wheel

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>A2cli</title>
+  <title>MoldeoJs Connector - moldeojs.moldeo.org</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="noselectx">
   <script>
     var fs = undefined;
     var http = undefined;
@@ -17,6 +17,6 @@
        http = require("http");
     }
   </script>
-  <app-root>Loading...</app-root>  
+  <app-root>Loading...</app-root>
 </body>
 </html>
